cmake_minimum_required(VERSION 3.24)
project(AS3PM)
if(NOT LINUX)
    message(STATUS ">>> APPLE")
    link_directories("/opt/homebrew/lib")
    include_directories("/opt/homebrew/include")
else(LINUX)
    message(STATUS ">>>LINUX")
endif()
set(CMAKE_CXX_STANDARD 17)
link_libraries("-lczmq")
add_executable(AS3PM main.cpp Particle.cpp Particle.h)
