cmake_minimum_required(VERSION 3.24)
project(AS3PM C CXX)
#set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-g -Wall -std=c++11 -arch arm64 -fopenmp")
include_directories("/opt/homebrew/include")
if(NOT LINUX)
    message(STATUS ">>> APPLE")
    link_directories("/opt/homebrew/lib")
    include_directories("/opt/homebrew/include")
else(LINUX)
    message(STATUS ">>>LINUX")
endif()
set(CMAKE_CXX_STANDARD 17)
link_libraries("-lczmq")
#target_link_libraries(${PROJECT_NAME} c++)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++11 -arch arm64")
set(SOURCE_FILES ./ main.cpp main2.cpp)
add_executable(${PROJECT_NAME} ${SOURCE_FILES})
set_target_properties(AS3PM PROPERTIES LINKER_LANGUAGE CXX)

#link_libraries("-fopenmp")

#link_libraries("-lomp")
#add_executable(AS3PM main.cpp Particle.cpp Particle.h)
